--- a/noteReactPortfolio/package.json
+++ b/noteReactPortfolio/package.json
@@ -7,14 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "async": "^3.2.0",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^4.6.0",
     "global": "^4.4.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
-    "web-vitals": "^0.2.4",
-    "yarn": "^1.22.10"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
